--- a/KnittingMachineController/MDK-ARM/KnittingMachineController/KnittingMachineController.build_log.htm
+++ b/KnittingMachineController/MDK-ARM/KnittingMachineController/KnittingMachineController.build_log.htm
@@ -29,6 +29,31 @@ Project File Date:  06/22/2016
 Rebuild target 'KnittingMachineController'
 compiling stm32f4xx_it.c...
 compiling main.c...
+../Src/main.c(188): warning:  #177-D: function "MX_CRC_Init" was declared but never referenced
+  static void MX_CRC_Init(void)
+../Src/main.c(200): warning:  #177-D: function "MX_SDIO_SD_Init" was declared but never referenced
+  static void MX_SDIO_SD_Init(void)
+../Src/main.c(220): warning:  #177-D: function "MX_SPI1_Init" was declared but never referenced
+  static void MX_SPI1_Init(void)
+../Src/main.c(243): warning:  #177-D: function "MX_TIM1_Init" was declared but never referenced
+  static void MX_TIM1_Init(void)
+../Src/main.c(276): warning:  #177-D: function "MX_TIM2_Init" was declared but never referenced
+  static void MX_TIM2_Init(void)
+../Src/main.c(308): warning:  #177-D: function "MX_TIM3_Init" was declared but never referenced
+  static void MX_TIM3_Init(void)
+../Src/main.c(340): warning:  #177-D: function "MX_TIM4_Init" was declared but never referenced
+  static void MX_TIM4_Init(void)
+../Src/main.c(372): warning:  #177-D: function "MX_TIM5_Init" was declared but never referenced
+  static void MX_TIM5_Init(void)
+../Src/main.c(404): warning:  #177-D: function "MX_TIM6_Init" was declared but never referenced
+  static void MX_TIM6_Init(void)
+../Src/main.c(428): warning:  #177-D: function "MX_TIM7_Init" was declared but never referenced
+  static void MX_TIM7_Init(void)
+../Src/main.c(452): warning:  #177-D: function "MX_TIM8_Init" was declared but never referenced
+  static void MX_TIM8_Init(void)
+../Src/main.c(485): warning:  #177-D: function "MX_USART1_UART_Init" was declared but never referenced
+  static void MX_USART1_UART_Init(void)
+../Src/main.c: 12 warnings, 0 errors
 compiling stm32f4xx_hal_msp.c...
 compiling system_stm32f4xx.c...
 compiling stm32f4xx_ll_sdmmc.c...
@@ -52,8 +77,9 @@ compiling stm32f4xx_hal_uart.c...
 compiling stm32f4xx_hal_cortex.c...
 assembling startup_stm32f429xx.s...
 linking...
-Program Size: Code=9256 RO-data=476 RW-data=16 ZI-data=1840  
-"KnittingMachineController\KnittingMachineController.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=3528 RO-data=476 RW-data=8 ZI-data=1504  
+FromELF: creating hex file...
+"KnittingMachineController\KnittingMachineController.axf" - 0 Error(s), 12 Warning(s).
 
 <h2>Software Packages used:</h2>
 
