UART receive and send ready.

--- a/KnittingMachineController/MDK-ARM/KnittingMachineController/KnittingMachineController.build_log.htm
+++ b/KnittingMachineController/MDK-ARM/KnittingMachineController/KnittingMachineController.build_log.htm
@@ -26,7 +26,8 @@ Project File Date:  06/23/2016
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'KnittingMachineController'
+Rebuild target 'KnittingMachineController'
+compiling stm32f4xx_it.c...
 compiling main.c...
 ../Src/main.c(193): warning:  #177-D: function "MX_CRC_Init" was declared but never referenced
   static void MX_CRC_Init(void)
@@ -51,8 +52,30 @@ compiling main.c...
 ../Src/main.c(457): warning:  #177-D: function "MX_TIM8_Init" was declared but never referenced
   static void MX_TIM8_Init(void)
 ../Src/main.c: 11 warnings, 0 errors
+compiling stm32f4xx_hal_msp.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_ll_sdmmc.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_tim.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_spi.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_sd.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_crc.c...
+compiling stm32f4xx_hal_uart.c...
+compiling stm32f4xx_hal_cortex.c...
+assembling startup_stm32f429xx.s...
 linking...
-Program Size: Code=5600 RO-data=476 RW-data=12 ZI-data=1572  
+Program Size: Code=5596 RO-data=476 RW-data=8 ZI-data=1592  
 FromELF: creating hex file...
 "KnittingMachineController\KnittingMachineController.axf" - 0 Error(s), 11 Warning(s).
 
